--- a/tex/models/operational.tex
+++ b/tex/models/operational.tex
@@ -7,28 +7,43 @@ operations in.
 The $\VarStartOfSegment{a}{k}$ is the start time of job $i$ in segment $k$ and $\VarFinishOfSegment{a}{k}$ is the finish time of job $i$ in segment $k$.
 $\VarProcessingTime{a}{k}$ is the processing time of each segment. 
 \begin{alignat}{2}
-	& Max \sum_{a \in \SetActivity{\VarSupervisorAssignment}} \sum_{k \in \SetWorkSegment} \VarProcessingTime                                                         \\
-	& \text{Subject to:} \notag                                                                                                                                       \\
-    & \sum_{k \in \SetWorkSegment} \VarProcessingTime \cdot \VarActiveSegment{a}{k} = \ParOperationWork \cdot \VarIncludeActivity \quad \forall a \in \SetActivity{\VarSupervisorAssignment} \\
+	& \textbf{Maximize:} \notag\\
+	& \sum_{a \in \SetActivity{\VarSupervisorAssignment{}{t}}{}} \sum_{k \in \SetWorkSegment} \VarProcessingTime                                                         \\
+	& \textbf{Subject to:} \notag                                                                                                                                       \\
+    & \sum_{k \in \SetWorkSegment} \VarProcessingTime \cdot \VarActiveSegment{a}{k} \notag\\ 
+	& \quad = \ParActivityWork{} \cdot \VarIncludeActivity \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \\
 	& \VarStartOfSegment{a2}{1} \geq \VarFinishOfSegment{a1}{last(a1)} + \ParPreparation \notag                                                                       \\ 
-	& \quad \forall a1 \in \SetActivity{\VarSupervisorAssignment}, a2 \in \SetActivity{\VarSupervisorAssignment}                                                     \\
-	& \VarStartOfSegment{a}{k} \geq \VarFinishOfSegment{a}{k-1} - \ParConstraintLimit \cdot (2 - \VarActiveSegment{a}{k} + \VarActiveSegment{a}{k-1})                \notag\\
-	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment}\forall k \in \SetWorkSegment \\ 
+	& \quad \forall a1 \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall a2 \in \SetActivity{\VarSupervisorAssignment{}{t}}{}                                                     \\
+	& \VarStartOfSegment{a}{k} \geq \VarFinishOfSegment{a}{k-1} \notag\\
+	& \quad - \ParConstraintLimit \cdot (2 - \VarActiveSegment{a}{k} + \VarActiveSegment{a}{k-1})                \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{}\forall k \in \SetWorkSegment \\ 
 	& \VarProcessingTime = \VarFinishOfSegment{a}{k} - \VarStartOfSegment{a}{k}                                                                                       \\
-	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment \notag                                                                        \\
-	& \VarStartOfSegment{a}{k} \geq \ParEvent + \ParEventDuration - \ParConstraintLimit \cdot (1 - \VarSegmentInRelation)                                             \notag\\ 
-	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment, i \in \SetTimeInstance, e \in \SetEvent                                \\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment \notag                                                                        \\
+	& \VarStartOfSegment{a}{k} \geq \ParEvent + \ParEventDuration \notag\\
+	& \quad - \ParConstraintLimit \cdot (1 - \VarSegmentInRelation)                                             \notag\\ 
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment \notag\\
+	& \quad \forall i \in \SetTimeInstance \forall e \in \SetEvent                                \\
 	& \VarFinishOfSegment{a}{k} \leq \ParEvent + \ParConstraintLimit \cdot \VarSegmentInRelation                                                                      \notag\\ 
-	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment, i \in \SetTimeInstance, e \in \SetEvent                                \\
-	& \VarStartOfSegment{a}{1} \geq \ParTimeWindowStart \forall a \in \SetActivity{\VarSupervisorAssignment}                                                          \\
-	& \VarFinishOfSegment{a}{last(a)} \leq \ParTimeWindowFinish \forall a \in \SetActivity{\VarSupervisorAssignment}                                                  \\
-	& \VarActiveSegment{a}{k} \in \{0, 1\} \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment                                          \\
-	& \VarStartOfSegment{a}{k} \in [\ParAvailabilityStart, \ParAvailabilityFinish] \notag\\
-	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment  \\
-	& \VarFinishOfSegment{a}{k} \in [\ParAvailabilityStart, \ParAvailabilityFinish] \notag\\
-	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment \\
-	& \VarProcessingTime \in [0, \ParOperationWork] \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment                                               \\
-	& \VarSegmentInRelation \in \{0, 1\}                                                                                                                              \\ 
-	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment}, k \in \SetWorkSegment, i \in \SetTimeInstance, e \in \SetEvent \notag                               \\
-	& \theta_i \in \{0, 1\} \quad \forall a \in \SetActivity{\VarSupervisorAssignment}                                                                                \\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment \notag\\
+	& \quad \forall i \in \SetTimeInstance \forall e \in \SetEvent                                \\
+	& \VarStartOfSegment{a}{1} \geq \ParTimeWindowStart \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{}                                                          \\
+	& \VarFinishOfSegment{a}{last(a)} \leq \ParTimeWindowFinish \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{}                                                  \\
+	& \VarActiveSegment{a}{k} \in \{0, 1\} \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment                                          \\
+	& \VarStartOfSegment{a}{k} \in [\ParAvailabilityStart, \notag\\
+	& \quad \ParAvailabilityFinish] \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment  \\
+	& \VarFinishOfSegment{a}{k} \in [\ParAvailabilityStart, \notag\\
+	& \quad \ParAvailabilityFinish] \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment \\
+	& \VarProcessingTime \in [0, \ParOperationWork{a\_to\_o(a)} ] \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment                                               \\
+	& \VarSegmentInRelation \in \{0 , 1\}                                                                                                                              \\ 
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{} \forall k \in \SetWorkSegment \notag\\
+	& \quad \forall i \in \SetTimeInstance \forall e \in \SetEvent \notag                               \\
+	& \VarIncludeActivity{a} \in \{0, 1\} \notag\\
+	& \quad \forall a \in \SetActivity{\VarSupervisorAssignment{}{t}}{}                                                                                
 \end{alignat}
